--- a/game1/views/index.ejs
+++ b/game1/views/index.ejs
@@ -15,6 +15,6 @@
 <button id="paper">Paper</button>
 <button id="scissors">Scissors</button>
 
-  <script src="/js/app.js"></script>
+  <script src="../app.js"></script>
 </body>
 </html>
