--- a/game2/views/index.ejs
+++ b/game2/views/index.ejs
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Memory Game</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  hello
+<h3>Score: <span id="result"></span></h3>
+
+<div id="grid"></div>
+
+
+  <script src="/app.js"></script>
 </body>
 </html>
