--- a/game2/style.css
+++ b/game2/style.css
@@ -1,6 +1,19 @@
 #grid{
-  width: 400px;
+  width: 420px;
   height: 300px;
-  display: flex;
   flex-wrap: wrap;
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+  display: flex; 
+  padding-top: 80px;
 }
+
+body{
+  background-color: black;
+}
+
+h3{
+  color: white;
+}
+
