--- a/game4/style.css
+++ b/game4/style.css
@@ -1,21 +1,26 @@
+body{
+  background-color: rgb(0, 179, 255)
+}
+
 .grid {
   position: absolute;
   width: 560px;
   height: 300px;
   border: solid black 1px;
+  background-color: black;
 }
 
 .block {
   position: absolute;
   width: 100px;
   height: 20px;
-  background-color: blue;
+  background-color:lime;
 }
 .user {
   position: absolute;
   width: 100px;
   height: 20px;
-  background-color: purple;
+  background-color:yellow;
 }
 
 .ball {
@@ -23,5 +28,40 @@
   width: 20px;
   height: 20px;
   border-radius: 10px;
-  background-color: red;
+  background-color: green;
 }
+
+body {
+  color: #ffffff;
+  background-color:#1bafdb;
+}
+
+#start, #game-over {
+  font-family:Arial, Helvetica, sans-serif;
+  color: #ffffff;
+  padding: 20px;
+  position: fixed;
+  top:50%;
+  left:50%;
+  margin-top: -100px;
+  margin-left: -100px;
+  height:200px;
+  width:250px;
+  text-align: center;
+}
+
+#start a, #game-over a {
+  border: 3px solid #ffffff;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 15px;
+  cursor: pointer;
+  display: block;
+  width: 200px;
+  text-align: center;
+  font-size:2em;
+  display: inline-block;
+}
+
+#start a:hover, #game-over a:hover { background-color: #ffffff; color: #1bafdb; }
